# rust_riscv

./: Cargo.toml  README.md  bench  mes_benchs  simtx
docs/: all.html  index.html  sidebar-items.js
docs/isa/: enum.OpCode.html  enum.Type.html  index.html  sidebar-items.js  struct.Instruction.html
docs/machine/: RV32IMachine.t.html  index.html  sidebar-items.js  struct.RV32IMachine.html
docs/memory/: Memory.t.html  index.html  sidebar-items.js  trait.Memory.html
examples/: dump_dynamic.rs  elf.rs  isa.rs  params.rs  pre_alloc.rs  simtx.rs  simtx_alex.rs
resources/: app  backprop  bfs  compressed  fgets_test  file_strtof  file_write  function  hartid_test  heartwall  hotspot  kmeans  malloc  mandelbrot  mandelbrot_pthread  mandelbrot_rust  mandelbrotc  mandelbrotm  myocyte.out  pathfinder  pathfinder_barrier  srad  threaded2  threaded_big
resources/data/bfs/: graph65536.txt
resources/executables/: barrier  loop
resources/memory_snapshots/simtx/: app  barrier  function  loop  threaded2
src/: elf.rs  isa.rs  lib.rs  machine.rs  main.rs  memory.rs  types.rs
src/machine/: mod.rs  rv32i.rs  rv32imc.rs  rv32pthread.rs  simtx.rs
src/machine/simtx/: implem.rs  mod.rs  simtx.rs
src/machine/simtx/scheduler/: lexico.rs  loopaware.rs  mod.rs  proba.rs  timeshare.rs
src/machine/simtx/syscalls/: GOMP_parallel.rs  exit.rs  fgets.rs  fopen.rs  free.rs  fwrite.rs  malloc.rs  omp_get_num_threads.rs  omp_get_thread_num.rs  printf.rs  pthread_barrier_init.rs  pthread_barrier_wait.rs  pthread_create.rs  puts.rs  (+6 more)
tests/: elf.rs  isa.rs  machine.rs  memory.rs  types.rs
