[package]
name = "riscv-sandbox"
version = "0.3.0"
authors = ["Arthur Blanleuil <arthur.blanleuil@inria.fr>"]
description = "RISC-V implementation for educational purpose."
license = "MIT"

[profile.dev]
opt-level=0
debug=true

[profile.release]
opt-level=3
debug=false

[dependencies]
elf = "^0.0.10" # .elf files parsing
crossbeam = "*" # parallelism
clap = "*"      # command line arguments
